<resources>
    <string name="app_name">SmartCinema</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote Average</string>
    <string name="plot_synopsis">Plot Synopsis</string>
    <string name="details_name">Movie Details</string>
    <string name="setting_title">Settings</string>
    
    
    <string name="load_by">Filter Movies By</string>
    <string name="pref_sort_key" translatable="false">Sort key</string>

    <string name="pref_load_popular_value" translatable="false">popular</string>
    <string name="pref_load_top_rated_value" translatable="false">top_rated</string>
    <string name="pref_load_favorite_value" translatable="false">favorite</string>

    <string name="pref_load_popular_label" translatable="false">Popular</string>
    <string name="pref_load_top_rated_label" translatable="false">Top Rated</string>
    <string name="pref_load_favorite_label" translatable="false">Favorite</string>


    <string name="grid_images">Grid Images</string>
    <string name="movie_detail_image">Movie Detail Image</string>
    <string name="trailer">TRAILERS</string>
    <string name="reviews">REVIEWS</string>
    <string name="action_share">Share</string>
    <string name="add_my_favorities_movies_action_button">Add my favorities movies action button</string>
    <string name="play_icon">Play icon</string>

</resources>
