<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.chibusoft.smartcinema.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
       >

    <ImageView
        android:layout_width="@dimen/moviewidth"
        android:layout_height="@dimen/movieheight"
        android:scaleType="centerCrop"
        android:id="@+id/movieimage_details"
        android:contentDescription="@string/grid_images"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp">


        <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/title_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/release"
        android:text="@string/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/release_details"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/vote"
        android:text="@string/vote_average"
        android:layout_marginLeft="@dimen/text_left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/vote_details"
        android:layout_marginLeft="@dimen/text_left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/synopsis"
        android:text="@string/plot_synopsis"
        android:layout_marginLeft="@dimen/text_left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/synopsis_details"
        android:layout_marginLeft="@dimen/text_left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
    </ScrollView>
